# HODGE-electronics

./: .gitignore  HODGE-electronics.sln  README.md  hodge.yml  test.py
data-analysis/: binpacking.py  carmf5_analysis.ipynb  vector-quantize.ipynb
data-analysis/compress-cpp/: Makefile  cmake_install.cmake  compress_rs.h  main.cpp
data-analysis/compress-rs/: Cargo.toml
data-analysis/compress-rs/compressor/: Cargo.toml  build.rs
data-analysis/compress-rs/macros/: Cargo.toml
data-analysis/compress-rs/src/: lib.rs
data-analysis/compression/: CMakeCache.txt  CMakeLists.txt  Makefile  api.h  array.c  array.h  binary_heap.c  cmake_install.cmake  compress.c  compress.cpp  huffman.c  huffman.cpp  huffman.h
data-analysis/data/: HIGHDATA_Annotated_Nico_Analysis.csv  tf2.csv
data-analysis/data/sim_data/: highdata_sim.csv  lowdata_sim.csv  tf2_sim.csv
data-analysis/filter-tests/: Makefile  filter_test  main.cpp  plot_filter.py  plot_shit.py
data-analysis/filter-tests/DSPFilters/: Bessel.cpp  Bessel.h  Biquad.cpp  Biquad.h  Butterworth.cpp  Butterworth.h  Cascade.cpp  Cascade.h  ChebyshevI.cpp  ChebyshevI.h  ChebyshevII.cpp  ChebyshevII.h  Custom.cpp  Custom.h  Design.cpp  Design.h  Documentation.cpp  Elliptic.cpp  Elliptic.h  Filter.cpp  Filter.h  Layout.h  Legendre.cpp  Legendre.h  MathSupplement.h  Param.cpp  Params.h  PoleFilter.cpp  PoleFilter.h  RBJ.cpp  RBJ.h  RootFinder.cpp  RootFinder.h  SmoothedFilter.h  State.cpp  State.h  Types.h  Utilities.h
data-analysis/filter-tests/gnc/: StateDetermination.h  algebra.h  altitude.cpp  altitude.h  filters.h
data-analysis/flight-computer/: CMakeLists.txt  README.md  esp-writing.md  prebuild.sh
data-analysis/flight-computer/main/: CMakeLists.txt  cpp_pthread.cpp  esp_hal.h  flight_computer.cpp  gpio.cc  gpio.h  lib.rs.cc  lib.rs.h  radio.h
data-analysis/ground-station/: CMakeLists.txt  main.cpp
data-analysis/pthread/: README.md  build.sh  compile-rust.sh  prebuild.sh
data-analysis/pthread/main/: CMakeLists.txt  cpp_pthread.cpp
data-analysis/rocketpy-sims/: test_sim1.ipynb
data-analysis/rust/: Cargo.toml
data-analysis/rust-lib/: Cargo.toml  compress.h  lib.rs  ttfparser.h
data-analysis/rust-lib/.cargo/: config.toml
data-analysis/rust-lib/src/: lib.rs
data-analysis/rust/compress/: Cargo.toml  build.rs
data-analysis/rust/compress/.cargo/: config-xtensa.toml
data-analysis/rust/compress/src/: huffman.rs  lib.rs
data-analysis/rust/radio/: Cargo.toml
flight-computer/gps-demo/: CMakeLists.txt
flight-computer/src/: CMakeLists.txt  sdkconfig.old
flight-computer/src/v1/main/: CMakeLists.txt  Kconfig.projbuild  StateDetermination.cpp  bmp581.cpp  main.cpp
flight-computer/src/v1/main/algos/: StateDetermination.cpp  altitude.cpp
flight-computer/src/v1/main/algos/include/: StateDetermination.h  algebra.h
flight-computer/src/v1/main/include/: StateDetermination.h  bmp581.h  tmp1075.h
flight-computer/src/v1/main/sensors/: adxl375.cpp  bmp581.cpp  icm20948.cpp  tmp1075.cpp
flight-computer/src/v1/main/sensors/include/: adxl375.h  bmp581.h
flight-computer/src/v2/main/: CMakeLists.txt  Kconfig.projbuild  hal.h  lib.rs.cc  lib.rs.h  main.cpp  sd_manager.h  system.h  systems.h
flight-computer/src/v2/main/compress/: Cargo.toml
flight-computer/src/v2/main/compress/compress/: Cargo.toml  cbindgen.toml
flight-computer/src/v2/main/compress/compress/.cargo/: config-xtensa.toml
flight-computer/src/v2/main/compress/compress/src/: bitrep.rs  efloat.rs  huffman.rs  lib.rs  quantize.rs
flight-computer/src/v2/main/compress/macros/: Cargo.toml
flight-computer/src/v2/main/gnc/: StateDetermination.cpp  StateDetermination.h  algebra.cpp  algebra.h  altitude.cpp  altitude.h  filters.cpp  filters.h
flight-computer/src/v2/main/peripherals/: i2c_ex.h
flight-computer/src/v2/main/sensors/: apo_aggregator.cpp  apo_aggregator.h  i2c_ex.h  sensor_aggregator.cpp  sensor_aggregator.h  sensor_interface.h  sensor_types.h
flight-computer/src/v2/main/sensors/drivers/: adxl375.cpp  adxl375.h  bmp581.cpp  bmp581.h  gps.cpp  gps.h  gps_nmea.cpp  gps_nmea.h  icm20948.cpp  icm20948.h  nmea_parser.cpp  nmea_parser.h  tmp1075.cpp  tmp1075.h
flight-computer/src/v2/main/sensors/implementation/: adxl375.cpp  adxl375.h  bmp581.cpp  tmp1075.cpp
ground-station/: DBSuperToken.txt  db.py  db_test.py
ground-station/antenna-tracker/: speed_test.ino
ground-station/groundstation-application-c-sharp/: dashboard.py  dashboard_updater_task.cs  database_handler_task.cs  dependencies.sh  groundstation-application-c-sharp.csproj  serial_reader_task.cs  shared_memory.cs  shared_memory_tester.cs  task_handler.cs  thread_runner.cs
ground-station/groundstation-application-python/: dash_errorbox.py  dashboard_new_thread.py  dashboard_thread.py  db_handler.py  db_handler_thread.py  diagnostic_application_runner.py  serial_reader_thread.py  shared_memory.py  thread_handler.py  thread_manager.py
ground-station/new-dash-gui/: accelGauge.py  altSlide.py  gauges-and-gps-temp.py  gps-and-temp.py  gps-card.py  map.py  ready.py  six-grid.py  temp.py  testing.py  trash.txt  velGauge.py
ground-station/old-dash-gui/: app.py  app_test.py  dash_errorbox.py  dash_gauges.py  dash_gmaps.py  dash_state_and_toggles.py  dash_test.py  db_handler.py  db_test.py  dbadddata.py  dummy_tests.py  mod_dashboard.py  process_manager_test.py  serial_parser.py  shared_memory.py
ground-station/parsing-and-shared-memory/: .shared_memory.py.swp  dash_gauges.py  dash_gmaps.py  dash_state_and_toggles.py  dash_test.py  db_handler.py  process_handler.py  process_handler_no_arduino.py  serial_reader.py  shared_memory.py
ground-station/serial-latency-test/: arduino_serial_write.ino  pi_serial_read.py  results.txt  timetest.py
ground-station/src/antenna-tracker/main/: AccelStepper.cpp  CMakeLists.txt  Kconfig.projbuild  LSM9DS1_ESP_IDF.cpp  idf_component.yml  main.cpp
ground-station/src/antenna-tracker/main/include/: AccelStepper.h  EspHal.h  LSM9DS1_ESP_IDF.h  MultiStepper.h  NewUW_MahonyAHRS.h  ReactiveMultiStepper.h
ground-station/tests/: db_test.py
(+121 files in other folders)
