[package]
name = "compress"
version = "0.25.1"
authors = [
    "May Neelon mayflowerc10@gmail.com"
]
license = "MIT"
edition = "2018"

[lib]
name = "compress"
path = "lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = true

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [{ from="ttfparser.h" }]
