[package]
name = "compress"
version = "0.25.1"
authors = [
    "May Neelon mayflowerc10@gmail.com"
]
license = "MIT"
edition = "2018"

[lib]
name = "compress"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.144"

[build-dependencies]
cxx-build = "1.0"

[profile.release]
lto = true

[package.metadata.capi.header]
generation = false

[package.metadata.capi.install.include]
asset = [{ from="ttfparser.h" }]
