[package]
name = "compress"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["staticlib"]

[dependencies]
bitstream-io = "2.6.0"
cxx = "1.0.144"
itertools = "0.14.0"
lazy_static = "1.5"
paste = "1.0.15"
macros = { path = "../macros" }

[build-dependencies]
cxx-build = "1.0"

[profile.release]
lto = true

[package.metadata.capi.header]
generation = false
